kubernetes/influxdb/overlays/okd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: influxdb
  namespace: influxdb
  labels:
    app: influxdb
    app.kubernetes.io/instance: influxdb
spec:
  host: influxdb.apps.okd.<path:secret/data/homelab/domain#url>
  to:
    kind: Service
    name: influxdb
    weight: 100
  port:
    targetPort: 8086
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
